--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: apphud_flutter
-description: A new flutter plugin project.
-version: 0.0.1
-author:
-homepage:
+description: Unofficial AppHud SDK for Flutter
+version: 1.0.0
+homepage: https://github.com/Filaind/Apphud_Flutter
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
